Fix [#36845] New generated blank image doesn't update preview (properties editor)

* IMAGE_OT_NEW did not had a notifier yet for some weird reason.