source/blender/editors/space_image/image_ops.c
@@ -1804,6 +1804,8 @@ static int image_new_exec(bContext *C, wmOperator *op)
 
 	BKE_image_signal(ima, (sima) ? &sima->iuser : NULL, IMA_SIGNAL_USER_NEW_IMAGE);
 	
+	WM_event_add_notifier(C, NC_IMAGE | NA_EDITED, ima);
+	
 	return OPERATOR_FINISHED;
 }
 
